# DeepLearningSegmentationEditor

./: .gitattributes  LICENSE.txt  README.md
BuildNativeOps/: Notes.txt  build.py
NativeTorchCudaOps/: CMakeLists.txt  TORCHSHARP_CUDA_EMPTY_CACHE_WINDOWS.md
TrainAiModel/: MainForm.cs
src/: AiSharp.sln  DeepLearningEditor.sln
src/AiOps/: AiOps.csproj  ServiceCollectionExtension.cs
src/AiOps/AiUtils/: CustomExceptions.cs  HelperFunctions.cs  IModelParameter.cs  ImageDataAugmentations.cs  LearningRateOptimizer.cs  Locations.cs  LossFunctions.cs  ModelLayerBuilders.cs  TensorImageCalcHelper.cs
src/AiOps/CudaOps/: NativeOps.cs
src/AiOps/Models/: ISegmentationModel.cs  ISegmentationModelFactory.cs  ModelComplexityConfigProvider.cs
src/AiOps/Training/: SegmentationTrainer.cs  TrainingStopMonitor.cs
src/AiOps/Utils/: BatchSizeEstimator.cs  ConcatSegmentationDataset.cs  FilteredSegmentationDatasetDataset.cs  LossFunctions.cs  ModelLayerBuilders.cs  SegmentationDataset.cs
src/AnnotationTool.Ai/: AnnotationTool.Ai.csproj  ServiceCollectionExtension.cs
src/AnnotationTool.Ai/Geometry/: SegmentationImageSpace.cs
src/AnnotationTool.Ai/IO/: ModelMetaData.cs
src/AnnotationTool.Ai/Inference/: ISegmentationInferencePipeline.cs  SegmentationInferencePipeline.cs
src/AnnotationTool.Ai/Models/: IModelComplexityConfigProvider.cs  ISegmentationModel.cs  ISegmentationModelFactory.cs  ModelComplexityConfigFactory.cs  ModelComplexityConfigProvider.cs  SegmentationModelConfig.cs  SegmentationModelFactoryForSdk.cs
src/AnnotationTool.Ai/Processing/: SegmentationPostprocessor.cs  SegmentationPreprocessor.cs
src/AnnotationTool.Ai/Training/: SegmentationTrainer.cs  SegmentationTrainingPipeline.cs  TrainingContext.cs  TrainingOptimizationFactory.cs  TrainingStopMonitor.cs  TrainingTileGenerator.cs
src/AnnotationTool.Ai/Utils/: AiUtils.cs  BatchSizeEstimator.cs  ConcatSegmentationDataset.cs  DatasetStatistics.cs  FilteredSegmentationDatasetDataset.cs  ImageAugmentations.cs  LearningRateOptimizer.cs  LossFunctions.cs  ModelLayerBuilders.cs  SegmentationDataset.cs
src/AnnotationTool.App/: AnnotationTool.App.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  ServiceRegistration.cs
src/AnnotationTool.App/Controls/: AnnotationToolsPanel.Designer.cs  AnnotationToolsPanel.cs  DeepLearningSettingsPanel.Designer.cs  DeepLearningSettingsPanel.cs  FeaturesDisplay.Designer.cs  FeaturesDisplay.cs  ImageGrid.Designer.cs  ImageGrid.cs  InferenceResultsView.Designer.cs  InferenceResultsView.cs  PulsingSpinner.Designer.cs  PulsingSpinner.cs
src/AnnotationTool.App/Drawing/: BrushTool.cs
src/AnnotationTool.Core/: AnnotationTool.Core.csproj  ServiceCollectionExtensions.cs
src/AnnotationTool.InferenceSdk/: AnnotationTool.InferenceSdk.csproj  CogImageBuffer.cs  Enums.cs  InferenceDevice.cs  InferenceJsonHelper.cs  SegmentationInferenceSession.cs  Utils.cs
src/AnnotationTool.InferenceSdk.Tests/: AnnotationTool.InferenceSdk.Tests.csproj  AssemblyInfo.cs  InferenceMemoryLeakTests.cs  SegmentationInferenceSessionSdkTests.cs  SegmentationPrePostProcessorTests.cs  SegmentationPreprocessingTests.cs  SegmentationSdkTests.cs  Utils.cs
src/RunAiModel/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  RunAiModel.csproj
src/TrainAiModel/: MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  TrainAiModel.csproj
(+86 files in other folders)
